Add explain component, add explain-box component, add footer component, add variables, clean up some unused code

--- a/sass/assets/_variables.scss
+++ b/sass/assets/_variables.scss
@@ -12,3 +12,5 @@ $breakpoint-sm: $container-sm-width - 1;
 $breakpoint-xs: 479px;
 
 //colors
+$color-primary: rgba(255, 198, 37, 1);
+$color-secondary: rgba(108, 125, 227, 1);
