--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -8,5 +8,5 @@
     padding: 16px 118px;
     text-decoration: none;
     text-transform: uppercase;
-    background-color: rgba(108,125,227,1);
+    background-color: $color-secondary;
 }
